Added class="conatiner" to <main>

--- a/index.html
+++ b/index.html
@@ -9,5 +9,23 @@
     </head>
 
     <body>
+        <header>
+            <h1>Assignment 4</h1>
+
+            <nav>
+                <ul>
+                    <li><a href="index.html"></a></li>
+                </ul>
+            </nav>
+
+        </header>
+
+        <main>
+            <div class="container">
+                <img class="hero-picture" src="images/3d-project.jpg" alt="3d project" width="500">
+                <div class="center-text">Dreamscape Sphere</div>
+
+            </div>
+        </main>
         
     </body>
