--- a/index.html
+++ b/index.html
@@ -20,12 +20,34 @@
 
         </header>
 
-        <main>
-            <div class="container">
+        <main class="container">
+
+            <div class="animation">
+                <img class="cloud-top" src="images/cloud.png" alt="cloud">
+                <img class="cloud-mid" src="images/cloud.png" alt="cloud">
+                <img class="cloud-bottom" src="images/cloud.png" alt="cloud">
+            </div>
+
+            <div class="hero">
                 <img class="hero-picture" src="images/3d-project.jpg" alt="3d project" width="800">
                 <div class="center-text">Dreamscape Sphere</div>
 
             </div>
+
+            <section class="container">
+                <h2>About Dreamscape Sphere</h2>
+                <p>This 3D render of <span>Dreamscape Sphere</span> was taken from a free stock image page. I chose this 3D image as I like it alot and utilizes colors that I love in general.</p>
+            </section>
+
+            <section>
+                <h3>Creator</h3>
+                <img class="creator-img" src="images/3d-project.jpg" alt="3d project" width="200">
+                <p>I would want to know who the creator of this 3D render is. I would like to check out their other work and see if they have a series or anything similar to this.</p>
+            </section>
+
+
+
+
         </main>
         
     </body>
